<resources>
    <string name="app_name" translatable="false">宅基地信息收集系统</string>
    <string name="module_setting_desc">分组管理</string>
    <string name="homestead_setting_desc">宅基地管理</string>
    <string name="setting_desc">设置</string>
    <string name="about_desc">关于</string>
    <string name="exit_desc">退出</string>
    <string name="back_desc">返回</string>
    <string name="btn_add_desc">新增</string>
    <string name="btn_delete_desc">删除</string>
    <string name="btn_modify_desc">修改</string>
    <string name="btn_refresh_desc">刷新</string>
    <string name="aboutAuthorText">作者：杜朋波</string>
    <string name="aboutQQAddress">QQ：604662780</string>
    <string name="aboutWeChatAddress">微信：18991935119</string>
    <string name="aboutDataPath">数据路径：{0}</string>
    <string name="exitDialogTitle">退出？</string>
    <string name="exitDialogMessage">您确定要退出"宅基地信息收集系统"？</string>
    <string name="dialogYes">是的</string>
    <string name="dialogNo">否</string>
    <string name="moduleLabel">分组：</string>
    <string name="moduleID">分组ID</string>
    <string name="moduleCounty">县</string>
    <string name="moduleTown">乡/镇</string>
    <string name="moduleVillage">村</string>
    <string name="moduleGroup">组</string>
    <string name="moduleOperation">操作</string>
    <string name="moduleCountyLabel">县：</string>
    <string name="moduleTownLabel">乡/镇：</string>
    <string name="moduleVillageLabel">村：</string>
    <string name="moduleGroupLabel">组：</string>
    <string name="deleteModuleDialogTitle">删除分组？</string>
    <string name="deleteModuleDialogMessage">您确定要删除选中的分组？分组删除后，之前采集的数据也将一起删除。</string>
    <string name="deleteHomesteadDialogTitle">删除宅基地信息？</string>
    <string name="deleteHomesteadDialogMessage">您确定要删除选中的宅基地信息？宅基地信息删除后，之前采集的数据也将一起删除。</string>
    <string name="btn_save_desc">保存</string>
    <string name="btn_reset_desc">重置</string>
    <string name="success_created_module">分组创建成功。</string>
    <string name="failure_created_module">分组创建失败。</string>
    <string name="success_updated_module">分组更新成功。</string>
    <string name="failure_updated_module">分组更新失败。</string>
    <string name="success_query_module">查询分组信息成功。</string>
    <string name="failure_query_module">查询分组信息失败。</string>
    <string name="failure_deleted_module">删除分组信息失败。</string>
    <string name="success_deleted_module">删除分组信息成功。</string>
    <string name="failure_deleted_homestead">删除宅基地信息失败。</string>
    <string name="success_deleted_homestead">删除宅基地信息成功。</string>
    <string name="success_query_homestead">查询宅基地信息成功。</string>
    <string name="failure_query_homestead">查询宅基地信息失败。</string>
    <string name="success_created_homestead">宅基地创建成功。</string>
    <string name="failure_created_homestead">宅基地创建失败。</string>
    <string name="success_updated_homestead">宅基地更新成功。</string>
    <string name="failure_updated_homestead">宅基地更新失败。</string>
    <string name="homeSteadID">宅基地ID</string>
    <string name="moduleInfo">分组信息</string>
    <string name="homeSteadNumber">编号</string>
    <string name="houseHolder">户主</string>
    <string name="basicInfo">基本信息</string>
    <string name="handlerInfo">户主身份证信息</string>
    <string name="agentInfo">代理人身份证信息</string>
    <string name="censusInfo">户籍信息</string>
    <string name="homeSteadInfo">宅基地信息</string>
    <string name="othersInfo">其他信息</string>
    <string name="noteInfo">调查记事</string>
    <string name="moduleInfoLabel">分组信息：</string>
    <string name="homeSteadNumberLabel">采集编号：</string>
    <string name="houseHolderLabel">户主姓名：</string>
    <string name="holderPhoneLabel">户主电话：</string>
    <string name="idCard01Label">正面：</string>
    <string name="idCard02Label">反面：</string>
    <string name="census01Label">户籍页1：</string>
    <string name="census02Label">户籍页2：</string>
    <string name="census03Label">户籍页3：</string>
    <string name="census04Label">户籍页4：</string>
    <string name="census05Label">户籍页5：</string>
    <string name="census06Label">户籍页6：</string>
    <string name="census07Label">户籍页7：</string>
    <string name="census08Label">户籍页8：</string>
    <string name="census09Label">户籍页9：</string>
    <string name="census10Label">户籍页10：</string>
    <string name="census11Label">户籍页11：</string>
    <string name="census12Label">户籍页12：</string>
    <string name="census13Label">户籍页13：</string>
    <string name="census14Label">户籍页14：</string>
    <string name="census15Label">户籍页15：</string>
    <string name="census16Label">户籍页16：</string>
    <string name="census17Label">户籍页17：</string>
    <string name="census18Label">户籍页18：</string>
    <string name="census19Label">户籍页19：</string>
    <string name="census20Label">户籍页20：</string>
    <string name="homeStead01Label">宅基地1：</string>
    <string name="homeStead02Label">宅基地2：</string>
    <string name="homeStead03Label">宅基地3：</string>
    <string name="homeStead04Label">宅基地4：</string>
    <string name="homeStead05Label">宅基地5：</string>
    <string name="homeStead06Label">宅基地6：</string>
    <string name="homeStead07Label">宅基地7：</string>
    <string name="homeStead08Label">宅基地8：</string>
    <string name="homeStead09Label">宅基地9：</string>
    <string name="homeStead10Label">宅基地10：</string>
    <string name="homeStead11Label">宅基地11：</string>
    <string name="homeStead12Label">宅基地12：</string>
    <string name="homeStead13Label">宅基地13：</string>
    <string name="homeStead14Label">宅基地14：</string>
    <string name="homeStead15Label">宅基地15：</string>
    <string name="homeStead16Label">宅基地16：</string>
    <string name="homeStead17Label">宅基地17：</string>
    <string name="homeStead18Label">宅基地18：</string>
    <string name="homeStead19Label">宅基地19：</string>
    <string name="homeStead20Label">宅基地20：</string>
    <string name="colon">：</string>
    <string name="other01Label">其他1：</string>
    <string name="other02Label">其他2：</string>
    <string name="other03Label">其他3：</string>
    <string name="other04Label">其他4：</string>
    <string name="other05Label">其他5：</string>
    <string name="other06Label">其他6：</string>
    <string name="other07Label">其他7：</string>
    <string name="other08Label">其他8：</string>
    <string name="other09Label">其他9：</string>
    <string name="other10Label">其他10：</string>
    <string name="camera_desc">拍照</string>
    <string name="add_census_desc">添加户籍页</string>
    <string name="delete_census_desc">删除户籍页</string>
    <string name="add_homestead_desc">添加宅基地页</string>
    <string name="delete_homestead_desc">添加宅基地页</string>
    <string name="add_other_desc">添加其他页</string>
    <string name="delete_other_desc">删除其他页</string>
    <string name="preview_desc">预览</string>
    <string name="no_picture_to_review">没有照片可以浏览。</string>
    <string name="not_implements_module">此模块尚未实现。</string>
    <string name="module_spinner_all_item">所有</string>
    <string name="homestead_note_filename">05-调查记事-[{0}-{1}].txt</string>
    <string name="permission_settings_ok">确定</string>
    <string name="permission_settings_title">权限申请</string>
    <string name="permission_settings_cancel">取消</string>
    <string name="permission_settings_set">设置</string>
    <string name="permission_settings_message">请在打开的权限窗口中开启{0}权限，以正常使用本应用。</string>
    <string name="permission_key_camera">相机</string>
    <string name="message_failed_save_picture">保存照片失败。</string>
    <string name="permission_key_store">存储空间</string>
    <string name="permission_key_camera_message">需要您允许我们使用相机，以便HIS正常运行。</string>
    <string name="permission_key_store_message">需要您允许我们读写你的存储卡，以便HIS正常运行。</string>
    <string name="need_create_module_info">请先创建分组信息。</string>
    <string name="homestead_number_cannot_be_empty">采集编号不能为空。</string>
    <string name="homestead_number_error_not_valid">只允许输入数字，长度4-10位。</string>
    <string name="homestead_number_hint">请输入采集编号</string>
    <string name="house_holder_cannot_be_empty">户主姓名不能为空。</string>
    <string name="house_holder_error_not_valid">只允许输入中文，最大长度5。</string>
    <string name="house_holder_hint">请输入户主姓名</string>
    <string name="holder_phone_cannot_be_empty">户主电话不能为空。</string>
    <string name="holder_phone_error_not_valid">只允许输入数字，长度11位。</string>
    <string name="holder_phone_hint">请输入户主电话</string>
    <string name="module_county_cannot_be_empty">县不能为空。</string>
    <string name="module_county_error_not_valid">只允许输入中文，最大长度5。</string>
    <string name="module_county_hint">请输入县信息</string>
    <string name="module_town_cannot_be_empty">乡/镇不能为空。</string>
    <string name="module_town_error_not_valid">只允许输入中文，最大长度5。</string>
    <string name="module_town_hint">请输入乡/镇信息</string>
    <string name="module_village_cannot_be_empty">村不能为空。</string>
    <string name="module_village_error_not_valid">只允许输入中文，最大长度5。</string>
    <string name="module_village_hint">请输入村信息</string>
    <string name="module_group_cannot_be_empty">组不能为空。</string>
    <string name="module_group_error_not_valid">只允许输入中文，最大长度5。</string>
    <string name="module_group_hint">请输入组信息</string>
    <string name="device_info_label">设备信息：</string>
    <string name="registration_code_label">注册码：</string>
    <string name="registration_code__hint">请输入注册码</string>
    <string name="btn_registration_desc">注册</string>
    <string name="permission_key_phone_status">手机信息</string>
    <string name="permission_key_wifi_status">WIFI信息</string>
    <string name="permission_key_bluetooth_status">蓝牙信息</string>
    <string name="permission_key_phone_message">需要您允许我们读取手机信息，以便HIS正常运行。</string>
    <string name="permission_key_wifi_message">需要您允许我们读取WIFI信息，以便HIS正常运行。</string>
    <string name="permission_key_bluetooth_message">需要您允许我们读取蓝牙信息，以便HIS正常运行。</string>
    <string name="registration_code_cannot_be_empty">注册码不能为空。</string>
    <string name="failed_validation_registration_code">注册码不正确或者已过期。</string>

</resources>
