<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:context=".module.ModifyModuleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableRow>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:ems="10"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:typeface="serif"
                    android:text="@string/moduleCountyLabel" />
                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/moduleCounty"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    whatever:testType="regexp"
                    whatever:customRegexp="^[\u4E00-\u9FA5a]{0,5}"
                    whatever:emptyAllowed="false"
                    whatever:emptyErrorString="@string/module_county_cannot_be_empty"
                    whatever:testErrorString="@string/module_county_error_not_valid"
                    android:hint="@string/module_county_hint"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="text"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:ems="10"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:typeface="serif"
                    android:text="@string/moduleTownLabel" />
                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/moduleTown"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    whatever:testType="regexp"
                    whatever:customRegexp="^[\u4E00-\u9FA5a]{0,5}"
                    whatever:emptyAllowed="false"
                    whatever:emptyErrorString="@string/module_town_cannot_be_empty"
                    whatever:testErrorString="@string/module_town_error_not_valid"
                    android:hint="@string/module_town_hint"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="text"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:ems="10"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:typeface="serif"
                    android:text="@string/moduleVillageLabel" />
                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/moduleVillage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    whatever:testType="regexp"
                    whatever:customRegexp="^[\u4E00-\u9FA5a]{0,5}"
                    whatever:emptyAllowed="false"
                    whatever:emptyErrorString="@string/module_village_cannot_be_empty"
                    whatever:testErrorString="@string/module_village_error_not_valid"
                    android:hint="@string/module_village_hint"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="text"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:ems="10"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:typeface="serif"
                    android:text="@string/moduleGroupLabel" />
                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/moduleGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    whatever:testType="regexp"
                    whatever:customRegexp="^[\u4E00-\u9FA5a]{0,5}"
                    whatever:emptyAllowed="false"
                    whatever:emptyErrorString="@string/module_group_cannot_be_empty"
                    whatever:testErrorString="@string/module_group_error_not_valid"
                    android:hint="@string/module_group_hint"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="text"/>
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginLeft="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/button_circle_shape"
                    android:text="@string/btn_save_desc"/>
                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/button_circle_shape"
                    android:text="@string/btn_reset_desc"/>
            </LinearLayout>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="#00000000"
                android:contentDescription="@string/back_desc"
                android:src="@mipmap/back"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>