<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:collapseColumns="0,1">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/moduleID"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:layout_width="56dp"
            android:layout_height="22dp"
            android:ems="10"
            android:textSize="14sp"
            android:textColor="#000000"
            android:typeface="serif"
            android:text="@string/moduleID" />

        <TextView
            android:id="@+id/homeSteadID"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:layout_width="56dp"
            android:layout_height="20dp"
            android:ems="10"
            android:textSize="14sp"
            android:textColor="#000000"
            android:typeface="serif"
            android:text="@string/homeSteadID" />

        <TextView
            android:id="@+id/moduleInfo"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:ems="10"
            android:textSize="14sp"
            android:textColor="#000000"
            android:typeface="serif"
            android:text="@string/moduleInfo" />

        <TextView
            android:id="@+id/homeSteadNumber"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:ems="10"
            android:textSize="14sp"
            android:textColor="#000000"
            android:typeface="serif"
            android:text="@string/homeSteadNumber" />

        <TextView
            android:id="@+id/houseHolder"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:ems="10"
            android:textSize="14sp"
            android:textColor="#000000"
            android:typeface="serif"
            android:text="@string/houseHolder" />

        <CheckBox
            android:id="@+id/cbxStatus"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:ems="10"/>
    </TableRow>
</TableLayout>