<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:context=".about.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="40dp">

            <TextView
                android:id="@+id/aboutAuthor"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:typeface="serif"
                android:text="@string/aboutAuthorText" />

            <TextView
                android:id="@+id/aboutQQAddress"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:typeface="serif"
                android:text="@string/aboutQQAddress" />

            <TextView
                android:id="@+id/aboutWeChatAddress"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:typeface="serif"
                android:text="@string/aboutWeChatAddress" />

            <TextView
                android:id="@+id/aboutDataPath"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:typeface="serif"
                android:text="@string/aboutDataPath" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="#00000000"
                android:contentDescription="@string/back_desc"
                android:src="@mipmap/back"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>